# xed

./: LICENSE  README.markdown  xed.cabal
src/: Main.hs
